<resources>
    <string name="app_name">yukkajian</string>
    <string name="register">Register</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="menu_account">My Account</string>
    <string name="menu_jadwal_kajian">Jadwal Kajian</string>
    <string name="menu_jadwal_sholat">Jadwal Sholat</string>
    <string name="menu_kelola_kajian">Kelola Kajian</string>
    <string name="menu_live_streaming">Streaming Kajian</string>
    <string name="inputan_kajian">Membuat Kajian</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_clock">&#xf017;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_marker">&#xf041;</string>
    <string name="icon_menu_home">&#xf015;</string>
    <string name="icon_menu_setting">&#xf085;</string>
    <string name="icon_menu_help">&#xf29c;</string>
    <string name="icon_menu_account">&#xf2be;</string>
    <string name="icon_ada_kajian">&#xf274;</string>
    <string name="icon_no_kajian">&#xf273;</string>
    <string name="icon_jadwal_kajian">&#xf073;</string>
    <string name="icon_jadwal_shalat">&#xf017;</string>
    <string name="icon_kelola_kajian">&#xf040;</string>
    <string name="icon_kajian_streaming">&#xf16a;</string>
    <string name="icon_list_kelola_kajian">&#xf02d;</string>
    <string name="judul_kajian">Al Wajiiz Fii Fiqhi</string>
    <string name="desc_kajian">Kajian ini membahas kitab Al Wajiiz Fii Fiqhi yang mana merupakan fiqih praktis</string>
    <string name="learn_more">LEARN MORE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="copyright_praytime">API Jadwal Sholat by : PrayTimes.org</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="register_clue">Belum punya akun?</string>disini
    <string name="to_register">Daftar disini</string>
    <string name="title_activity_maps">Map</string>
</resources>
