<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_size"
        android:layout_marginBottom="@dimen/big_padding"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="@dimen/small_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:background="@android:color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/small_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/big_padding"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginLeft="@dimen/big_padding"
            android:layout_marginRight="@dimen/big_padding"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/shape_login"
            android:text="@string/signin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/white"
                android:text="@string/register_clue"/>
            <TextView
                android:id="@+id/toRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/very_very_small_padding"
                android:textSize="@dimen/text_size"
                android:textColor="@android:color/holo_blue_light"
                android:text="@string/to_register"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

