<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/container_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_size"
                android:src="@drawable/banner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:id="@+id/menu_jadwal_kajian"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/small_padding"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_size"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/icon_jadwal_kajian"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/home_menu" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/small_padding"
                        android:paddingTop="@dimen/small_padding"
                        android:gravity="center"
                        android:text="@string/menu_jadwal_kajian"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu_jadwal_sholat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_padding"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_size"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/icon_jadwal_shalat"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/home_menu" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/small_padding"
                        android:paddingTop="@dimen/small_padding"
                        android:gravity="center"
                        android:text="@string/menu_jadwal_sholat"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:id="@+id/menu_kelola_kajian"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/small_padding"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_size"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/icon_kelola_kajian"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/home_menu" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/small_padding"
                        android:paddingTop="@dimen/small_padding"
                        android:gravity="center"
                        android:text="@string/menu_kelola_kajian"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/menu_livestream_kajian"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_padding"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/menu_size"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/icon_kajian_streaming"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/home_menu" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/small_padding"
                        android:paddingTop="@dimen/small_padding"
                        android:gravity="center"
                        android:text="@string/menu_live_streaming"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
