<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kelola_kajian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context="com.almuflihun.yukkajian.KelolaKajian">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/container_icon"
            android:layout_width="@dimen/kajian_imlist_size"
            android:layout_height="@dimen/kajian_imlist_size"
            android:layout_margin="@dimen/small_padding"
            android:background="@color/colorPrimaryDark">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/icon_list_kelola_kajian"
                android:textColor="@android:color/white"
                android:textSize="@dimen/kelola_kajian_icon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/small_padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul_kajian"
                android:textSize="@dimen/text_size_big"
                android:layout_marginBottom="@dimen/very_small_padding"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_kajian"
                android:textSize="@dimen/text_size"
                android:lines="2"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/small_padding"
        android:src="@drawable/add" />
</RelativeLayout>
