<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_kelola_kajian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.almuflihun.yukkajian.DetailKelolaKajian">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:src="@drawable/sample" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/icon_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_padding"
                    android:text="@string/icon_calendar"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_icon" />

                <TextView
                    android:id="@+id/tanggal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="tanggal"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/icon_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_padding"
                    android:text="@string/icon_clock"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_icon" />

                <TextView
                    android:id="@+id/jam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="jam"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/icon_marker"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_icon" />

            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Alamat kajian"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/small_padding"
            android:text="Judul"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:text="@string/icon_user"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_icon" />

            <TextView
                android:id="@+id/pemateri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Pemateri"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="deskripsi"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/list_pertanyaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_orange"
            android:text="Lihat Pertanyaan"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
